Add error placeholder for data loading issues

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                         <div class="team-record" id="team-b-record">0-0</div>
                     </div>
                     <img id="team-b-avatar" class="team-avatar" src="" alt="Team B">
+                    <div class="error-placeholder hidden">Data unavailable or failed to load.</div>
                 </div>
             </div>
 
