Update background color and fix series line typo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         margin: 0 0 16px 0;
         border: 2px solid rgba(255, 255, 255, 0.15);
         border-radius: 14px;
-        background: rgba(0, 0, 0, 1);
+        background: rgba(0, 0, 0, 0.25);
         backdrop-filter: blur(6px);
       }
 
@@ -41,6 +41,116 @@
 
       .kiltbowl-kilt .stroke { stroke: currentColor; }
       .kiltbowl-kilt .fill { fill: currentColor; }
+
+      /* ------------------------------
+         Mobile responsiveness
+         ------------------------------ */
+      @media (max-width: 640px) {
+        .container {
+          padding: 12px;
+        }
+
+        .kiltbowl-banner {
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 10px;
+          padding: 12px;
+        }
+
+        .kiltbowl-banner h1 {
+          font-size: 22px;
+        }
+
+        .kiltbowl-banner .series-line {
+          font-size: 13px;
+        }
+
+        .kiltbowl-kilt {
+          width: 56px;
+          height: 56px;
+          align-self: flex-end;
+        }
+
+        /* Scoreboard header stacks nicely */
+        .header {
+          display: grid;
+          grid-template-columns: 1fr;
+          gap: 12px;
+          align-items: center;
+        }
+
+        .team-header {
+          justify-content: space-between;
+        }
+
+        .team-avatar {
+          width: 42px;
+          height: 42px;
+        }
+
+        .score-display {
+          font-size: 34px;
+          line-height: 1;
+        }
+
+        .vs {
+          text-align: center;
+          margin: -6px 0;
+          opacity: 0.85;
+        }
+
+        /* Starters columns become single column */
+        .matchup-container {
+          display: grid;
+          grid-template-columns: 1fr;
+          gap: 14px;
+        }
+
+        .team-column h3 {
+          margin-top: 0;
+        }
+
+        /* Player cards wrap and tighten */
+        .player-card {
+          gap: 10px;
+          padding: 10px 12px;
+        }
+
+        .player-name {
+          font-size: 14px;
+        }
+
+        .player-details {
+          font-size: 12px;
+        }
+
+        .score-box {
+          min-width: 84px;
+        }
+
+        .footer .update-info {
+          display: grid;
+          grid-template-columns: 1fr;
+          gap: 6px;
+          text-align: left;
+        }
+      }
+
+      /* Ultra-small screens */
+      @media (max-width: 380px) {
+        .kiltbowl-banner h1 {
+          font-size: 20px;
+        }
+
+        .score-display {
+          font-size: 30px;
+        }
+
+        .team-avatar {
+          width: 38px;
+          height: 38px;
+        }
+      }
     </style>
 </head>
 <body>
@@ -48,7 +158,7 @@
         <div class="kiltbowl-banner" aria-label="Kilt Bowl header">
             <div>
                 <h1>Kilt Bowl 2026</h1>
-                <div class="series-line">Current series: Team conner27lax 1-0 Junktion • Best of 3</div>
+                <div class="series-line">Current series: Team conner27lax 1-0 Junction • Best of 3</div>
             </div>
 
             <svg class="kiltbowl-kilt" viewBox="0 0 128 128" role="img" aria-label="Kilt icon" xmlns="http://www.w3.org/2000/svg">
