--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
   <div class="container">
-    <!-- Optional header (safe to delete if you want) -->
+
+    <!-- Optional banner (safe to delete) -->
     <header class="kiltbowl-banner">
       <div>
         <h1>Kilt Bowl 2026</h1>
@@ -71,7 +72,7 @@
     </div>
   </div>
 
-  <!-- Player modal required by app.js -->
+  <!-- Player modal (required by app.js) -->
   <div id="player-modal-backdrop" class="modal-backdrop" aria-hidden="true">
     <div class="player-modal" role="dialog" aria-modal="true" aria-labelledby="player-modal-title">
       <div class="player-modal-header">
@@ -84,13 +85,13 @@
         </div>
         <button id="player-modal-close" class="player-modal-close" type="button" aria-label="Close">Close</button>
       </div>
+
       <div id="player-modal-body" class="player-modal-body">
         <div class="player-loading">Loading…</div>
       </div>
     </div>
   </div>
 
-  <!-- Load your app logic -->
   <script src="app.js"></script>
 </body>
 </html>
