--- a/index.html
+++ b/index.html
@@ -10,39 +10,41 @@
 <body>
   <div class="container">
 
+    <!-- Banner -->
     <header class="kiltbowl-banner">
       <div>
         <h1>Kilt Bowl 2026</h1>
-        <div class="series-line">Current series: Team conner27lax 1-0 Junction • Best of 3</div>
+        <div class="series-line">
+          Current series: Team conner27lax 1-0 Junction • Best of 3
+        </div>
       </div>
     </header>
 
-    <div id="loading">Loading scoreboard data...</div>
+    <!-- Loading -->
+    <div id="loading">Loading matchup…</div>
 
+    <!-- Scoreboard -->
     <div id="scoreboard" class="hidden">
+
       <div class="header">
         <div class="team-header">
           <img id="team-a-avatar" class="team-avatar" src="" alt="Team A" />
           <div class="team-info">
-            <h2 id="team-a-name">Team A</h2>
-            <div class="team-record" id="team-a-record">0-0</div>
+            <h2 id="team-a-name"></h2>
+            <div class="team-record" id="team-a-record"></div>
           </div>
         </div>
 
-        <div class="score-wrap">
-          <div class="score-display" id="score-a">0.00</div>
-        </div>
+        <div class="score-display" id="score-a">0.00</div>
 
         <div class="vs">VS</div>
 
-        <div class="score-wrap">
-          <div class="score-display" id="score-b">0.00</div>
-        </div>
+        <div class="score-display" id="score-b">0.00</div>
 
         <div class="team-header">
           <div class="team-info" style="text-align:right;">
-            <h2 id="team-b-name">Team B</h2>
-            <div class="team-record" id="team-b-record">0-0</div>
+            <h2 id="team-b-name"></h2>
+            <div class="team-record" id="team-b-record"></div>
           </div>
           <img id="team-b-avatar" class="team-avatar" src="" alt="Team B" />
         </div>
@@ -69,30 +71,32 @@
     </div>
   </div>
 
-  <!-- Player modal -->
+  <!-- Player Modal -->
   <div id="player-modal-backdrop" class="modal-backdrop" aria-hidden="true">
     <div class="player-modal" role="dialog" aria-modal="true" aria-labelledby="player-modal-title">
+
       <div class="player-modal-header">
         <div class="player-modal-title">
-          <div>
-            <h2 id="player-modal-title">Player</h2>
-            <div id="player-modal-subtitle" class="player-modal-subtitle"></div>
-            <div id="player-modal-actions" class="player-modal-actions"></div>
-          </div>
+          <h2 id="player-modal-title"></h2>
+          <div id="player-modal-subtitle" class="player-modal-subtitle"></div>
+          <div id="player-modal-actions" class="player-modal-actions"></div>
         </div>
-        <button id="player-modal-close" class="player-modal-close" type="button" aria-label="Close">Close</button>
+        <button
+          id="player-modal-close"
+          class="player-modal-close"
+          type="button"
+          aria-label="Close">
+          Close
+        </button>
       </div>
 
       <div id="player-modal-body" class="player-modal-body">
-        <div class="player-loading">Loading…</div>
+        <div class="player-loading">Loading player data…</div>
       </div>
     </div>
   </div>
 
-  <!-- REQUIRED for stats-static.yml parsing -->
-  <script src="https://cdn.jsdelivr.net/npm/js-yaml@4/dist/js-yaml.min.js"></script>
-
-  <!-- Your app -->
+  <!-- App -->
   <script src="app.js"></script>
 </body>
 </html>
