--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <header class="kiltbowl-banner">
       <div>
         <h1>Kilt Bowl 2026</h1>
-        <div class="series-line">
-          Current series: Team conner27lax 1-0 Junction • Best of 3
-        </div>
+        <div class="series-line">Current series: Team conner27lax 1-0 Junction • Best of 3</div>
       </div>
     </header>
 
@@ -81,11 +79,8 @@
           <div id="player-modal-subtitle" class="player-modal-subtitle"></div>
           <div id="player-modal-actions" class="player-modal-actions"></div>
         </div>
-        <button
-          id="player-modal-close"
-          class="player-modal-close"
-          type="button"
-          aria-label="Close">
+
+        <button id="player-modal-close" class="player-modal-close" type="button" aria-label="Close">
           Close
         </button>
       </div>
@@ -96,7 +91,6 @@
     </div>
   </div>
 
-  <!-- App -->
   <script src="app.js"></script>
 </body>
 </html>
